package com.controlacceso.accescontrol.dto;

public record CardRequestDTO(String uid) {
}
